--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <h2>Contato</h2>
             <form action="">
                 <label for="nome">Nome: </label>
+                <input type="text" id="nome" name="nome">
             </form>
             <address>
                 Email: <a href="mailto: agathaflrs111@gmail.com">agathaflrs111@gmail.com</a> <br>
